# Epitech-Tek3-CPP-R-Type

./: AEntity_8hpp.html  AEntity_8hpp.js  AEntity_8hpp_source.html  ANetworkHandler_8hpp.html  ANetworkHandler_8hpp.js  ANetworkHandler_8hpp_source.html  APacket_8hpp.html  APacket_8hpp.js  APacket_8hpp_source.html  AScene_8hpp.html  AScene_8hpp.js  AScene_8hpp_source.html  ActualPlayer_8hpp.html  ActualPlayer_8hpp.js  ActualPlayer_8hpp_source.html  AiShoot_8hpp.html  AiShoot_8hpp.js  AiShoot_8hpp_source.html  AnimationProjectile_8cpp.html  AnimationProjectile_8hpp.html  AnimationProjectile_8hpp.js  AnimationProjectile_8hpp_source.html  Animation_8hpp.html  Animation_8hpp.js  Animation_8hpp_source.html  BonusData_8hpp.html  BonusData_8hpp.js  BonusData_8hpp_source.html  BonusHandler_8cpp.html  BonusHandler_8hpp.html  BonusHandler_8hpp.js  BonusHandler_8hpp_source.html  BonusService_8cpp.html  BonusService_8hpp.html  BonusService_8hpp.js  BonusService_8hpp_source.html  Bonus_8hpp.html  Bonus_8hpp.js  Bonus_8hpp_source.html  BossAlien_8cpp.html  (+984 more)
.github/: super-linter.env
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build.yml  doxygen.yml  lint.yml  main.yml  mirror.yml  release.yml
assets/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json
config/: config.json
config/action/: player.json
config/levels/: level_1.json
include/: Components.hpp  GameLoader.hpp  IComponent.hpp  Keys.hpp  Networks.hpp  Packets.hpp  Structures.hpp  Systems.hpp  ThreadPool.hpp
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+76 more)
src/: main.cpp
src/ECS/: AEntity.hpp  ComponentManager.hpp  EntityManager.hpp  IEntity.hpp  SparseSet.hpp  SystemManager.hpp
src/ECS/Scene/: AScene.hpp  IScene.hpp  SceneManager.hpp
src/Network/Packets/: APacket.hpp  EPacketCode.hpp  IPacket.hpp
src/Network/Packets/Descriptors/PacketBonus/: PacketBonus.cpp  PacketBonus.hpp
src/Network/Packets/Descriptors/PacketConnect/: PacketConnect.cpp  PacketConnect.hpp
src/Network/Packets/Descriptors/PacketEndGame/: PacketEndGame.cpp  PacketEndGame.hpp
src/Network/Packets/Descriptors/PacketEnemiesData/: PacketEnemiesData.cpp  PacketEnemiesData.hpp
src/Network/Packets/Descriptors/PacketLevelsRegistered/: PacketLevelsRegistered.cpp  PacketLevelsRegistered.hpp
src/Network/Packets/Descriptors/PacketNewPlayer/: PacketNewPlayer.cpp  PacketNewPlayer.hpp
src/Network/Packets/Descriptors/PacketPlayerShoot/: PacketPlayerShoot.cpp  (+1 more)
src/Network/Packets/PacketFactory/: PacketFactory.cpp  PacketFactory.hpp
src/Network/TCPNetwork/: TCPNetwork.cpp  TCPNetwork.hpp
src/Network/UDPNetwork/: UDPNetwork.cpp  UDPNetwork.hpp
src/RType/: RType.cpp  RType.hpp
src/RType/Components/: Client.hpp  Player.cpp  Player.hpp  Shared.hpp
src/RType/Components/Client/: Animation.hpp  FrameLimit.hpp  InputHandler.hpp  Mode.hpp  Music.hpp  OnClick.hpp  RWindow.hpp  SfText.hpp  SlidingBg.hpp  Sound.hpp  Speed.hpp  Sprite.hpp  ZIndex.hpp
src/RType/Components/Server/: AiShoot.hpp
src/RType/Components/Shared/: ActualPlayer.hpp  Bonus.hpp  ChildEntities.hpp  Counter.hpp  Created.hpp  Damage.hpp  Dead.hpp  EventId.hpp  GameState.hpp  Health.hpp  Hitbox.hpp  IA.hpp  MenuState.hpp  NetId.hpp  Network.hpp  NoDamageToPlayer.hpp  ParentEntity.hpp  PlayerBonuses.hpp  Position.hpp  Projectile.hpp  ProjectileInfo.hpp  Running.hpp  Size.hpp  Speed.hpp  String.hpp  Velocity.hpp  Waves.hpp
src/RType/Config/: Config.cpp  Config.hpp
src/RType/Entities/: BossAlien.cpp  BossAlien.hpp  BossCask.cpp  BossCask.hpp  BossDarkplayer.cpp  BossDarkplayer.hpp  BossHeart.cpp  BossHeart.hpp  BossMachin.cpp  BossMachin.hpp  BossRobot.cpp  BossRobot.hpp  BossStaros.cpp  BossStaros.hpp  BossTurret.cpp  BossTurret.hpp  Button.cpp  Button.hpp  Enemy.cpp  Enemy.hpp  EnemyCornus.cpp  EnemyCornus.hpp  EnemyCrabus.cpp  EnemyCrabus.hpp  EnemyPablitos.cpp  EnemyPablitos.hpp  Game.cpp  Game.hpp  Image.cpp  Image.hpp  Player.cpp  Player.hpp  PlayerCounter.cpp  PlayerCounter.hpp  Window.cpp  Window.hpp
src/RType/Levels/: Level.cpp  Level.hpp  LevelBuilder.hpp  LevelManager.cpp  LevelManager.hpp
src/RType/ModeManager/: ModeManager.cpp
src/RType/Models/: BonusData.hpp  EBonusType.hpp  EEnemyType.hpp  EnemyData.hpp  PlayerData.hpp  ProjectileData.hpp  Scene.hpp  Spawn.hpp
src/RType/Network/Packets/: APacket.hpp  ConnectPacket.hpp  EPacketCode.hpp  IPacket.hpp
src/RType/Network/TCPNetwork/: TCPNetwork.cpp  TCPNetwork.hpp
src/RType/Network/UDPNetwork/: UDPNetwork.cpp  UDPNetwork.hpp
src/RType/Scenes/Game/: Game.cpp  Game.hpp
src/RType/Scenes/Lose/: Lose.cpp  Lose.hpp
src/RType/Scenes/Menu/: Menu.cpp  Menu.hpp
src/RType/Scenes/Win/: Win.cpp  Win.hpp
src/RType/Services/BonusService/: BonusService.cpp  BonusService.hpp
src/RType/Services/EnemyService/: EnemyService.cpp  EnemyService.hpp
src/RType/Services/PlayerService/: PlayerService.cpp  PlayerService.hpp
src/RType/Services/ProjectileService/: ProjectileService.cpp  ProjectileService.hpp
src/RType/Systems/: AnimationProjectile.cpp  AnimationProjectile.hpp  InputSystem.cpp  InputSystem.hpp  LevelRunner.cpp  LevelRunner.hpp  MonsterSpawner.cpp  MonsterSpawner.hpp  Movement.cpp  Movement.hpp  Network.cpp  Network.hpp  RenderWindow.cpp  RenderWindow.hpp
src/RType/Systems/Network/: Network.cpp  Network.hpp
src/RType/Systems/Sound/: Sound.cpp  Sound.hpp
src/RType/TextureManager/: TextureManager.cpp  TextureManager.hpp
src/RType/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
src/Systems/: AnimationProjectile.cpp  AnimationProjectile.hpp
src/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
(+34 files in other folders)
